fix detail gap

--- a/client/src/components/SongPage/SongDetails/SongDetails.module.css
+++ b/client/src/components/SongPage/SongDetails/SongDetails.module.css
@@ -6,6 +6,7 @@
   padding: var(--spacing-md);
   display: grid;
   grid-template-columns: 1fr 2rem 1fr;
+  column-gap: 0.4rem;
   align-items: center;
   flex: 1;
 }
